Application de Signals Java
- Application directe, sans tests